Revision: Commit stashed work to separate text shaping and painting, some other refactors